# carbox

./: .gitignore  .gitmodules  LICENSE.md  README.md  carbox_config.yaml  plot_abunds_no_heating.py  plot_flux_no_heating.py  pyproject.toml  pytest.ini  requirements.txt  run.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
benchmarks/: README.md  compare_results.py  extract_uclchem_initial.py  plot_publication_comparison.py  run_benchmarks.sh  run_carbox.py  run_uclchem.py
benchmarks/compare/: __init__.py  compare_abundances.py  compare_performance.py
benchmarks/configs/: networks.yaml
benchmarks/efficiency/: benchmark_parallel_speedup.py
benchmarks/initial_conditions/: gas_phase_only_initial.yaml  small_chemistry_initial.yaml
benchmarks/processing_speed/: benchmark_parallel_speedup.py  benchmark_speed.py
carbox/: __init__.py  carbox.csv  config.py  constants.py  initial_conditions.py  main.py  network.py  output.py  parser.py  parser_latent_tgas.py  parser_umist.py  reactions.py  solver.py  solver_callbacks.py  species.py  thermo.py  uclchem_photoreactions.py
carbox/parsers/: README.md  __init__.py  base_parser.py  latent_tgas_parser.py  parser_umist.py  uclchem_parser.py  umist_parser.py  unified_parser.py
carbox/reactions/: __init__.py  latent_gas_reactions.py  reactions.py  uclchem_photoreactions.py  uclchem_reactions.py  umist_reactions.py  universal_reactions.py
data/: simple_latent_tgas.csv  uclchem_gas_phase_only.csv  uclchem_small_chemistry.csv
docs/: improvements.md  minimal_parallel_implementation.md  parallel_simulation_plan.md
examples/latent_tgas/: compare.py  plot_abunds_no_heating.py  plot_flux_no_heating.py  run.sh
examples/latent_tgas/jax/: chem_commons.py  chem_cooling.py  chem_heating.py  chem_ode.py  chem_rates.py  main_data.py
examples/latent_tgas/scipy/: chem_commons.py  chem_cooling.py  chem_heating.py  chem_ode.py  chem_rates.py  main_data.py
notebooks/: parse_network.py  parser_testing.py
notebooks/carlos_testing/: parser_testing.py  umist.py
notebooks/usage/: umist.py
output/: carbox_run_abundances.csv  carbox_run_metadata.json  carbox_run_summary.txt
sensitivity_analysis/: plot_cr_sensitivity.py  run_cr_sensitivity.py  run_cr_sensitivity.sh
tests/: __init__.py  conftest.py  test_parsers.py  test_public_api.py
tests/test_data/: test_latent_tgas.csv  test_uclchem.csv  test_umist.csv
